# ChangeLog for dev-util/stgit
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/stgit/Attic/ChangeLog,v 1.23 2007/04/10 18:07:41 ferdy Exp $

*stgit-0.12.1-r1 (10 Apr 2007)

  10 Apr 2007; Fernando J. Pereda <ferdy@gentoo.org>
  +stgit-0.12.1-r1.ebuild:
  Add a bash-completion script. Thanks to Nicolas Boichat
  <nicolas@boichat.ch>. Fixes bug #174014

*stgit-0.12.1 (04 Apr 2007)

  04 Apr 2007; Fernando J. Pereda <ferdy@gentoo.org> +stgit-0.12.1.ebuild:
  New upstream version.

*stgit-0.12 (07 Feb 2007)

  07 Feb 2007; Fernando J. Pereda <ferdy@gentoo.org> +stgit-0.12.ebuild:
  New upstream version

*stgit-0.11 (21 Oct 2006)

  21 Oct 2006; Fernando J. Pereda <ferdy@gentoo.org> +stgit-0.11.ebuild:
  New upstream version.

  27 Sep 2006; Fernando J. Pereda <ferdy@gentoo.org> -stgit-0.8.1.ebuild:
  Remove old version.

  09 Sep 2006; Stephanie Lockwood-Childs <wormo@gentoo.org> stgit-0.10.ebuild:
  stable on ppc (Bug #146232)

  09 Sep 2006; Torsten Veller <tove@gentoo.org> stgit-0.10.ebuild:
  Stable on x86 (bug #146232)

  06 Sep 2006; Luis Medinas <metalgod@gentoo.org> stgit-0.10.ebuild:
  Stable on amd64. Bug #146232.

  04 Sep 2006; Markus Rothe <corsair@gentoo.org> stgit-0.10.ebuild:
  Stable on ppc64; bug #146232

  04 Sep 2006; Fernando J. Pereda <ferdy@gentoo.org> -stgit-0.9.ebuild:
  Remove 0.9

  04 Sep 2006; Fernando J. Pereda <ferdy@gentoo.org> stgit-0.10.ebuild:
  Stable on alpha wrt bug #146232

*stgit-0.10 (11 Jun 2006)

  11 Jun 2006; Fernando J. Pereda <ferdy@gentoo.org> +stgit-0.10.ebuild:
  New upstream version

  21 May 2006; Markus Rothe <corsair@gentoo.org> stgit-0.8.1.ebuild:
  Stable on ppc64

*stgit-0.9 (08 Apr 2006)

  08 Apr 2006; Fernando J. Pereda <ferdy@gentoo.org> +stgit-0.9.ebuild:
  New upstream version

  18 Feb 2006; Simon Stelling <blubb@gentoo.org> stgit-0.8.1.ebuild:
  added ~amd64 keyword

  17 Feb 2006; Joseph Jezak <josejx@gentoo.org> stgit-0.8.1.ebuild: