@@ -1,0 +1,3 @@
+MD5 deef5e864e465c13c92ac5c9f5a45700 stgit-0.13.tar.gz 187604
+RMD160 aba40517731b63e20645cd9596d96b7ca5943ab7 stgit-0.13.tar.gz 187604
+SHA256 9a22db7b66587af8fadb0dc1b6c6dbbbae332b7cb6483882f0abebe0159f50a8 stgit-0.13.tar.gz 187604
